<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingBottom="24dp"
    android:theme="@style/AppTheme.NoActionBar">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        android:gravity="center"
        android:text="@string/date_picker_title"
        android:textAppearance="@style/Text.OpenSans.Bold.20.PrimaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_reset"
        style="@style/AppTheme.MaterialTextButton.Default"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/reset"
        android:textAppearance="@style/Text.OpenSans.Regular.14"
        android:textColor="@color/color_accent"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_close"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:background="?selectableItemBackgroundBorderless"
        android:padding="14dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_bottom_sheet_close" />

    <!-- todo fix colors for night mode -->
    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />
    <!--    android:theme="@style/AppTheme.DatePickerStyle"-->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDone"
        style="@style/AppTheme.MaterialButton.Default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/ready"
        app:layout_constraintTop_toBottomOf="@id/datePicker" />

</androidx.constraintlayout.widget.ConstraintLayout>